<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.fauzangifari.dicodingexamandroidbegin.presentation.view.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_upcomingevent"
        android:name="com.fauzangifari.dicodingexamandroidbegin.presentation.view.UpcomingFragment"
        android:label="@string/title_upcomingevent"
        tools:layout="@layout/fragment_upcoming" />

    <fragment
        android:id="@+id/navigation_finishedevent"
        android:name="com.fauzangifari.dicodingexamandroidbegin.presentation.view.FinishedFragment"
        android:label="@string/title_finishedevent"
        tools:layout="@layout/fragment_finished" />
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.fauzangifari.dicodingexamandroidbegin.presentation.view.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

</navigation>