<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presentation.view.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:showDividers="middle">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:showDividers="middle">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                tools:ignore="UselessParent">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    card_view:cardCornerRadius="4dp"
                    card_view:cardElevation="4dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/mediaCoverDetails"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:scaleType="fitCenter"
                            android:contentDescription="@string/detail_media_cover"
                            android:background="@android:color/darker_gray"/>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <FrameLayout
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="8dp"
                    android:elevation="8dp">

                    <ImageView
                        android:id="@+id/favoriteIconDetails"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_favorite_border_24"
                        android:background="@drawable/icon_border"
                        android:padding="12dp"
                        android:contentDescription="@string/favorite_icon" />
                </FrameLayout>
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/titleDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="?attr/colorOnPrimary"
            android:text="@string/detail_title"
            android:gravity="center" />

        <TextView
            android:id="@+id/summaryDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/detail_summary"
            android:textSize="16sp"
            android:textColor="?attr/colorOnPrimary" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:dividerThickness="1dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_text_organizer"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="?attr/colorOnPrimary" />

            <TextView
                android:id="@+id/ownerNameDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_owner_name"
                android:textSize="14sp"
                android:textColor="?attr/colorOnPrimary"
                android:layout_marginStart="4dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_city"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="?attr/colorOnPrimary" />

            <TextView
                android:id="@+id/cityNameDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_city_name"
                android:textSize="14sp"
                android:textColor="?attr/colorOnPrimary"
                android:layout_marginStart="4dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_begin"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="?attr/colorOnPrimary" />

            <TextView
                android:id="@+id/beginTimeDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_begin_time"
                android:textSize="14sp"
                android:textColor="?attr/colorOnPrimary"
                android:layout_marginStart="4dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_end"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="?attr/colorOnPrimary" />

            <TextView
                android:id="@+id/endTimeDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_end_time"
                android:textSize="14sp"
                android:textColor="?attr/colorOnPrimary"
                android:layout_marginStart="4dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_quota"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="?attr/colorOnPrimary" />

            <TextView
                android:id="@+id/quotaDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_event_quota"
                android:textSize="14sp"
                android:textColor="?attr/colorOnPrimary"
                android:layout_marginStart="4dp" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:dividerThickness="1dp" />

        <TextView
            android:id="@+id/descriptionDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/detail_description"
            android:textSize="14sp"
            android:textColor="?attr/colorOnPrimary" />

        <Button
            android:id="@+id/linkButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/detail_link_button"
            android:backgroundTint="@color/design_default_color_primary"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>
