<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.SettingsActivity">

    <TextView
        android:id="@+id/titleSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_settings"
        android:textSize="24sp"
        android:gravity="center"
        android:padding="16dp"
        android:textColor="?attr/colorOnPrimary"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/titleSettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/themes_title"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/divider1"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="16dp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_title"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/switchTheme"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
