<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingBottom="8dp"
    tools:context=".presentation.view.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_title"
                android:textSize="30sp"
                android:textColor="@color/purple_500"
                android:fontFamily="sans-serif-black"
                android:textStyle="bold"
                android:gravity="start" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_upcoming_event"
                android:textSize="18sp"
                android:textColor="@color/purple_400"
                android:fontFamily="sans-serif-black"
                android:layout_marginTop="16dp"
                android:gravity="start" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/upcomingEventsRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="true" />

            <ProgressBar
                android:id="@+id/progressBarActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_finished_event"
                android:textSize="18sp"
                android:textColor="@color/purple_400"
                android:fontFamily="sans-serif-black"
                android:layout_marginTop="10dp"
                android:gravity="start" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/finishedEventsRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="50dp" />

            <ProgressBar
                android:id="@+id/progressBarNonActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
